# clinvar-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
functions/download_clinvar/: main.py  requirements.txt
images/enricher/: Dockerfile  enrich_annotations.py
images/loader/: Dockerfile  load_clinvar.py  requirements.txt  track.py
scripts/: build_images.sh  trigger_workflow.sh
tests/: test_enrich_annotations.py  test_load_clinvar.py
workflows/: clinvar_refresh.yaml
